<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sgreevers.depaul.csc472.algebrainflight.HomeScreenActivity">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play_btn"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:onClick="startGameplay"
        android:text="@string/play"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard_btn"
        app:layout_constraintStart_toStartOf="@+id/leaderboard_btn" />

    <Button
        android:id="@+id/leaderboard_btn"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_button"
        android:onClick="openLeaderboard"
        android:text="@string/leaderboard"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:onClick="openSettings"
        android:text="@string/settings"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/leaderboard_btn"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_btn" />

</android.support.constraint.ConstraintLayout>
